# Enchanted-chronicles

./: README.md
back/enchanted-chronicles/: Cargo.toml  README.md
back/enchanted-chronicles/src/: main.rs  routes.rs
back/enchanted-chronicles/src/controllers/: hello_controller.rs  paragraphs_controller.rs
back/enchanted-chronicles/src/repositories/: paragraphs_repository.rs
back/enchanted-chronicles/src/routes/: api.rs
back/enchanted-chronicles/src/services/: paragraphs_service.rs
back/enchanted-chronicles/tests/: quick_dev.rs
