[package]
name = "axum_api"
version = "0.1.0"
edition = "2021" 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = {version = "0.5.13", features = ["headers"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3.0", features = ["cors"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "json" ] }

aws-sdk-dynamodb = "0.28"
aws-config = "0.55.3"
aws-types = "0.55.3"
tokio-stream = "0.1.14"


[dev-dependencies]
httpc-test = "0.1.1"
anyhow = "1"
